--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <title>Landing Page</title>
 
@@ -148,7 +148,7 @@
             <div class="row latestnewstyling">
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem; box-shadow: 3px 3px 3px #0864B133;">
-                        <img src="/images/news1.png" class="card-img-top" alt="...">
+                        <img src="images/news1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
                           <a href=""style="color: #0864B1; float : right">Read <i class="fas fa-chevron-right" style="color: #0864B1;"></i></a>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem;box-shadow: 3px 3px 3px#0864B133;">
-                        <img src="/images/news2.png" class="card-img-top" alt="...">
+                        <img src="images/news2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
                           <a href=""style="color: #0864B1; float : right">Read <i class="fas fa-chevron-right" style="color: #0864B1;"></i></a>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" style="width: 18rem;box-shadow: 3px 3px 3px #0864B133;">
-                        <img src="/images/news3.png" class="card-img-top" alt="...">
+                        <img src="images/news3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
                           <a href=""style="color: #0864B1; float : right">Read <i class="fas fa-chevron-right" style="color: #0864B1;"></i></a>
